# aipartner-fresh

./: .gitignore  README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  db.rs  importer.rs  lib.rs  main.rs  memory.rs  models.rs
